--- a/client/views/accounts/entrySignIn/entrySignInPage.html
+++ b/client/views/accounts/entrySignIn/entrySignInPage.html
@@ -22,6 +22,7 @@
             <h3>Sign In</h3>
           </div>
           {{/unless}}
+
           <form class="entry-form" id='signIn'>
             <div class="form-group">
               <input id="emailInput" type="{{emailInputType}}" class="form-control" value='{{email}}' placeholder="{{emailPlaceholder}}">
@@ -30,13 +31,13 @@
               <input id="passwordInput" type="password" class="form-control" value='{{password}}' placeholder="Password">
             </div>
             <div class="form-group">
-              <a id="forgotPasswordLink" class="btn btn-default" href="/forgot-password">Forgot password?</a>
-              <a class="btn btn-default" href="/sign-up">Sign up</a>
+              <a id="forgotPasswordLink" class="btn btn-primary" href="/forgot-password">Forgot password?</a>
+              <a class="btn btn-success" href="/sign-up">Create Account</a>
             </div>
 
             <div id="entrySignInButton" class="fullwidth submit btn btn-info">Sign in</div>
           </form>
-<!--          <p class="entry-signup-cta">Don't have an account? </p> -->
+
         </div>
       </div>
     </div>
