--- a/client/views/accounts/entrySignUp/entrySignUpPage.html
+++ b/client/views/accounts/entrySignUp/entrySignUpPage.html
@@ -56,7 +56,7 @@
                             </div>
                         {{/if}}
 
-                        <button type="submit" class="submit btn btn-default">Sign up</button>
+                        <button type="submit" class="submit btn btn-primary">Sign up</button>
                     </form>
                     {{#if both}}
                         <p class="entry-agreement">By clicking Sign up, you agree to our
