--- a/client/views/accounts/entrySignUp/entrySignUpPage.html
+++ b/client/views/accounts/entrySignUp/entrySignUpPage.html
@@ -29,7 +29,7 @@
                         {{#if showUsername}}
                             <div class="form-group">
                                 <label>Username</label>
-                                <input name="username" type="string" class="form-control" value=''>
+                                <input id="username" name="username" type="string" class="form-control" value=''>
                             </div>
                         {{/if}}
 
