--- a/client/views/accounts/forgotPassword/forgotPassword.html
+++ b/client/views/accounts/forgotPassword/forgotPassword.html
@@ -16,7 +16,7 @@
             <div class="form-group">
               <input type="email" name="forgottenEmail" class="form-control" placeholder="Email address" value=''>
             </div>
-            <button type="submit" class="btn btn-default">Email Reset Link</button>
+            <button type="submit" class="btn btn-primary">Email Reset Link</button>
           </form>
           <p class="entry-signup-cta">Don't have an account? <a href="/sign-up">Sign up</a></p>
         </div>
