--- a/client/views/accounts/resetPassword/resetPassword.html
+++ b/client/views/accounts/resetPassword/resetPassword.html
@@ -16,9 +16,8 @@
             <div class="form-group">
               <input type="password" name="new-password" class="form-control" value=''>
             </div>
-            <button type="submit" class="btn btn-default">Update your password</button>
+            <button type="submit" class="btn btn-primary">Update your password</button>
           </form>
-<!--           <p class="entry-signup-cta">Don't have an account? <a href="/sign-up">Sign up</a></p> -->
         </div>
       </div>
     </div>
