--- a/client/views/static/cheatSheet/cheatSheet.html
+++ b/client/views/static/cheatSheet/cheatSheet.html
@@ -6,6 +6,8 @@
         </div>
         <div class="panel-body">
 
+            <p>Put each statement on a separate line.</p>
+
             <h4>Lines</h4>
             <p><kbd>title:</kbd> My title</p>
             <p>A<kbd>-></kbd>B<kbd>:</kbd> my message</p>
@@ -14,8 +16,11 @@
             <h4>Notes</h4>
             <p><kbd>note over</kbd>A<kbd>:</kbd> my note over A</p>
             <p><kbd>note over</kbd>A,B<kbd>:</kbd> my note over A and B</p>
+            <p><kbd>note left of</kbd>A<kbd>:</kbd> my note right of A</p>
+            <p><kbd>note right of</kbd>B<kbd>:</kbd> my note left of B</p>
 
 
+            <a href="/uid/simple">show this example</a>
             <hr>
             <p class="small">Required syntax is <kbd>marked</kbd></p>
         </div>
