fix cheat sheet

--- a/client/views/static/examplesPage.html
+++ b/client/views/static/examplesPage.html
@@ -1,5 +1,5 @@
-<template name="glossaryPage">
-  <div id="glossaryPage" class="page">
+<template name="examplesPage">
+  <div id="examplesPage" class="page">
     <div class="content">
 
 
