--- a/client/views/static/cheatSheet/cheatSheet.html
+++ b/client/views/static/cheatSheet/cheatSheet.html
@@ -8,17 +8,22 @@
 
             <p>Put each statement on a separate line.</p>
 
-            <h4>Lines</h4>
+            <h4>Title</h4>
             <p><kbd>title:</kbd> My title</p>
+
+            <h4>Calls</h4>
             <p>A<kbd>-></kbd>B<kbd>:</kbd> my message</p>
             <p>B<kbd>--></kbd>A<kbd>:</kbd> my return message</p>
 
             <h4>Notes</h4>
-            <p><kbd>note over</kbd>A<kbd>:</kbd> my note over A</p>
-            <p><kbd>note over</kbd>A,B<kbd>:</kbd> my note over A and B</p>
-            <p><kbd>note left of</kbd>A<kbd>:</kbd> my note right of A</p>
-            <p><kbd>note right of</kbd>B<kbd>:</kbd> my note left of B</p>
+            <p><kbd>note over</kbd>A<kbd>:</kbd> note over A</p>
+            <p><kbd>note over</kbd>A,B<kbd>:</kbd> note over A and B</p>
+            <p><kbd>note left of</kbd>A<kbd>:</kbd> note left of A</p>
+            <p><kbd>note right of</kbd>B<kbd>:</kbd> note right of B</p>
 
+            <h4>Multi-Line Text</h4>
+            <p>A<kbd>-></kbd>B<kbd>:</kbd> line1\nline2</p>
+            <p><kbd>note over</kbd>B<kbd>:</kbd> line1\nline2</p>
 
             <a href="/uid/simple">show this example</a>
             <hr>
