--- a/client/views/static/landingPage.html
+++ b/client/views/static/landingPage.html
@@ -3,8 +3,8 @@
     <div class="content">
 
 
-        <div class="col col-md-6 col-md-offset-3">
-          <div class="panel panel-default">
+        <div class="col col-md-8 col-md-offset-2">
+            <div class="panel panel-info">
             <div class="panel-heading">
               LANDING PAGE
             </div>
