fix cheat sheet

--- a/client/views/static/cheatSheet/cheatSheet.html
+++ b/client/views/static/cheatSheet/cheatSheet.html
@@ -22,8 +22,9 @@
             <p><kbd>note right of</kbd>B<kbd>:</kbd> note right of B</p>
 
             <h4>Multi-Line Text</h4>
-            <p>A<kbd>-></kbd>B<kbd>:</kbd> line1\nline2</p>
-            <p><kbd>note over</kbd>B<kbd>:</kbd> line1\nline2</p>
+            For multiple lines, separate each line with <strong>\n</strong> (new line char).
+            <p>A<kbd>-></kbd>B<kbd>:</kbd> line1<strong>\n</strong>line2</p>
+            <p><kbd>note over</kbd>B<kbd>:</kbd> line1<strong>\n</strong>line2</p>
 
             <a href="/uid/simple">show this example</a>
             <hr>
