fix cheat sheet

--- a/client/views/static/cheatSheet/cheatSheet.html
+++ b/client/views/static/cheatSheet/cheatSheet.html
@@ -22,13 +22,14 @@
             <p><kbd>note right of</kbd>B<kbd>:</kbd> note right of B</p>
 
             <h4>Multi-Line Text</h4>
-            For multiple lines, separate each line with <strong>\n</strong> (new line char).
-            <p>A<kbd>-></kbd>B<kbd>:</kbd> line1<strong>\n</strong>line2</p>
-            <p><kbd>note over</kbd>B<kbd>:</kbd> line1<strong>\n</strong>line2</p>
+            <p>For multiple lines, separate each line with <mark>\n</mark> (new line char).</p>
+            <p>A<kbd>-></kbd>B<kbd>:</kbd> line1<mark>\n</mark>line2</p>
+            <p><kbd>note over</kbd>B<kbd>:</kbd> line1<mark>\n</mark>line2</p>
 
-            <a href="/uid/simple">show this example</a>
             <hr>
             <p class="small">Required syntax is <kbd>marked</kbd></p>
+            <p class="small">new line char shown as <mark>\n</mark></p>
+            <a href="/uid/simple">show this example</a>
         </div>
     </div>
 </template>
