--- a/client/app/app.syntax.less
+++ b/client/app/app.syntax.less
@@ -1,9 +1,12 @@
-.padded{
+.padded {
   padding: 10px;
 }
-.fullwidth{
+.padded-2 {
+  padding: 2pt;
+}
+.fullwidth {
   width: 100%;
 }
-li{
+li {
   cursor: pointer;
 }
