--- a/client/app/panels/topPanel.less
+++ b/client/app/panels/topPanel.less
@@ -2,12 +2,14 @@
 
   #westRightArrowBtnID {
     position:absolute;
-    top:60px;
-    left:20px;
+    top:55px;
+    left:10px;
+    z-index: 999;
   }
   #eastLeftArrowBtnID {
     position:absolute;
-    top:60px;
-    right:20px;
+    top:55px;
+    right:10px;
+    z-index: 999;
   }
 }
