--- a/client/views/static/cheatSheet/cheatSheet.html
+++ b/client/views/static/cheatSheet/cheatSheet.html
@@ -6,7 +6,7 @@
         </div>
         <div class="panel-body">
 
-            <p>Put each statement on a separate line.</p>
+            <p>Put each statement on a separate line.  No, hyphens in names.</p>
 
             <h4>Title</h4>
             <p><kbd>title:</kbd> My title</p>
