--- a/client/views/static/privacyPage.html
+++ b/client/views/static/privacyPage.html
@@ -9,10 +9,20 @@
               PRIVACY PAGE
             </div>
             <div class="panel-body">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla non tincidunt erat. Pellentesque id volutpat magna. Proin iaculis ante in erat mollis adipiscing. Sed venenatis fermentum risus sit amet aliquam. Suspendisse potenti. Proin aliquam faucibus sapien vitae suscipit. Mauris luctus dictum turpis ut luctus. Quisque in magna eget nulla rutrum rutrum. Quisque vitae ipsum ac justo condimentum tristique vitae a justo. Ut auctor quam vitae tellus rutrum iaculis. Mauris sit amet adipiscing mauris.</p>
-              <p>Praesent aliquam molestie enim eget scelerisque. Etiam et blandit quam. Duis lacus odio, varius quis sem eu, dignissim suscipit nibh. Maecenas elit mauris, interdum nec imperdiet nec, porttitor feugiat metus. Curabitur sed libero augue. Ut viverra lectus ligula, in pretium nisl malesuada in. Phasellus accumsan dui velit, eget porttitor dolor eleifend sed. Praesent mollis dolor in est adipiscing tincidunt. Morbi lacinia tincidunt tortor non luctus. Nulla facilisi. Nullam nibh justo, vestibulum ac blandit in, imperdiet a sapien. Etiam et venenatis felis.</p>
-              <p>Etiam at risus molestie, ultrices orci a, aliquam ipsum. Nam eget neque pharetra, adipiscing velit non, pretium ipsum. Praesent vel mi auctor, sagittis tortor a, tincidunt neque. Sed turpis eros, rutrum id felis vitae, pulvinar gravida sem. Curabitur non lacus turpis. In convallis turpis in ipsum euismod molestie. Cras venenatis, est quis feugiat vestibulum, orci orci gravida ante, eget hendrerit leo urna at tortor. Nulla dictum semper laoreet. Morbi ac felis lorem. Nulla nibh risus, egestas suscipit posuere sit amet, laoreet id libero. Donec vitae nisi id elit cursus egestas. Duis at justo eros. Curabitur faucibus augue non elit ullamcorper, quis dignissim nisi sodales. Nam blandit a tortor eu accumsan. Aliquam erat volutpat.</p>
 
+                <h4>GENERAL</h4>
+                <p>Your privacy is important to me. All personal data stays where it is, and is only used for authentication.</p>
+
+                <h4>COLLECTION OF PERSONAL INFORMATION</h4>
+                <p>We would never ask for any personal information. Who wants that.</p>
+
+                <h4>USE OF PERSONAL INFORMATION</h4>
+                <p>We don't have keep any personal information except for your email - enough said. If we
+                send you an e-mail, it will contain a provision for you to opt out of receiving
+                any further information from us.</p>
+
+                <h4>POLICY CHANGES</h4>
+                <p>Will never occur.</p>
             </div>
           </div>
         </div>
