--- a/client/views/static/aboutPage.html
+++ b/client/views/static/aboutPage.html
@@ -15,6 +15,7 @@
                             </a>
                         </p>
 
+                        <p>Version {{version}}</p>
                         <hr>
 
                         <a href="https://trello.com/b/NePeqGwC/idiagram">Trello project tracking enhancements</a>
