--- a/client/views/home/homePage.html
+++ b/client/views/home/homePage.html
@@ -9,9 +9,7 @@
               HOME PAGE
             </div>
             <div class="panel-body">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae consectetur massa. Donec ante justo, tristique at fringilla ut, commodo eget turpis. Vestibulum dapibus placerat lacus eu tincidunt. Curabitur ultrices tristique nibh. Nulla adipiscing sapien arcu, porttitor rutrum arcu congue sed. Praesent ornare ipsum non diam feugiat congue. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-              <p>Phasellus blandit ultricies ipsum, vel tempor eros ornare sed. Suspendisse sed facilisis elit. Phasellus sodales fermentum mi nec ornare. Fusce et nibh risus. Sed malesuada risus eu dictum dictum. Vestibulum tortor dui, volutpat ac turpis at, luctus luctus odio. Etiam tincidunt hendrerit ligula non vulputate.</p>
-              <p>Aenean at nisi ac ante sodales iaculis. Sed eget iaculis ante. Suspendisse vitae elit sit amet mauris placerat lacinia et semper nulla. Pellentesque ac ligula non felis imperdiet fermentum. Donec non pretium nunc, a imperdiet libero. Donec sit amet vulputate eros. Pellentesque adipiscing, tortor vitae ullamcorper faucibus, nibh mi vestibulum odio, hendrerit scelerisque tortor leo id neque. Donec in magna lacus. Donec vel diam risus.</p>
+                <h1>I've got nothing...</h1>
             </div>
           </div>
         </div>
