--- a/client/views/static/examplesPage.html
+++ b/client/views/static/examplesPage.html
@@ -6,7 +6,7 @@
         <div class="col col-md-8 col-md-offset-2">
             <div class="panel panel-info">
             <div class="panel-heading">
-              Examples
+              EXAMPLES
             </div>
             <div class="panel-body">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
