--- a/client/views/home/homePage.html
+++ b/client/views/home/homePage.html
@@ -3,15 +3,40 @@
     <div class="content">
 
 
-        <div class="col col-md-6 col-md-offset-3">
+        <div class="col col-md-3 col-md-offset-1">
           <div class="panel panel-info">
             <div class="panel-heading">
-              HOME PAGE
+              SUMMARY
             </div>
             <div class="panel-body">
-                <h1>I've got nothing...</h1>
+
+                    <button class="btn btn-primary fullwidth" type="button">
+                        Your Diagrams <span class="badge pull-right">4</span>
+                    </button>
+                    <button class="btn btn-primary fullwidth" type="button">
+                        <span class="fa fa-star pull-left"> Your Starred Diagrams</span>  <span class="badge pull-right">4</span>
+                    </button>
+                <button class="btn btn-primary fullwidth" type="button">
+                    <span class="fa fa-lock pull-left"> Your Private Diagrams</span>  <span class="badge pull-right">4</span>
+                </button>
+                <button class="btn btn-primary fullwidth" type="button">
+                    <span class="fa fa-unlock pull-left"> Your Public Diagrams</span>  <span class="badge pull-right">4</span>
+                </button>
+
             </div>
           </div>
+        </div>
+
+        <div class="col col-md-6 col-md-offset-1">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    DIAGRAMS LAST UPDATED
+                </div>
+                <div class="panel-body">
+
+
+                </div>
+            </div>
         </div>
 
 
