--- a/client/views/home/homePage.html
+++ b/client/views/home/homePage.html
@@ -1,45 +1,44 @@
 <template name="homePage">
-  <div id="homePage" class="page">
-    <div class="content">
+    <div id="homePage" class="page">
+        <div class="content">
 
+            <div class="col col-md-3 col-md-offset-1">
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        SUMMARY
+                    </div>
+                    <div class="panel-body">
 
-        <div class="col col-md-3 col-md-offset-1">
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              SUMMARY
-            </div>
-            <div class="panel-body">
+                        <button class="btn btn-default fullwidth" type="button">
+                            Your Diagrams <span class="badge pull-right">{{allCnt}}</span>
+                        </button>
+                        <button class="btn btn-default fullwidth" type="button">
+                            <span class="fa fa-star pull-left"> Your Starred Diagrams</span> <span class="badge pull-right">{{starredCnt}}</span>
+                        </button>
+                        <button class="btn btn-default fullwidth" type="button">
+                            <span class="fa fa-lock pull-left"> Your Private Diagrams</span> <span class="badge pull-right">{{privateCnt}}</span>
+                        </button>
+                        <button class="btn btn-default fullwidth" type="button">
+                            <span class="fa fa-unlock pull-left"> Your Public Diagrams</span> <span class="badge pull-right">{{publicCnt}}</span>
+                        </button>
 
-                    <button class="btn btn-primary fullwidth" type="button">
-                        Your Diagrams <span class="badge pull-right">4</span>
-                    </button>
-                    <button class="btn btn-primary fullwidth" type="button">
-                        <span class="fa fa-star pull-left"> Your Starred Diagrams</span>  <span class="badge pull-right">4</span>
-                    </button>
-                <button class="btn btn-primary fullwidth" type="button">
-                    <span class="fa fa-lock pull-left"> Your Private Diagrams</span>  <span class="badge pull-right">4</span>
-                </button>
-                <button class="btn btn-primary fullwidth" type="button">
-                    <span class="fa fa-unlock pull-left"> Your Public Diagrams</span>  <span class="badge pull-right">4</span>
-                </button>
-
-            </div>
-          </div>
-        </div>
-
-        <div class="col col-md-6 col-md-offset-1">
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    DIAGRAMS LAST UPDATED
-                </div>
-                <div class="panel-body">
-
-
+                    </div>
                 </div>
             </div>
+
+            <div class="col col-md-6 col-md-offset-1">
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        DIAGRAMS LAST UPDATED
+                    </div>
+                    <div class="panel-body">
+
+
+                    </div>
+                </div>
+            </div>
+
+
         </div>
-
-
     </div>
-  </div>
 </template>
