--- a/client/views/home/homePage.html
+++ b/client/views/home/homePage.html
@@ -9,8 +9,8 @@
                     </div>
                     <div class="panel-body">
 
-                        <button class="btn btn-default fullwidth" type="button">
-                            Your Diagrams <span class="badge pull-right">{{allCnt}}</span>
+                        <button class="btn btn-primary fullwidth" type="button">
+                            <span class="fa fa-user pull-left"> <strong>Your Diagrams</strong></span> <span class="badge pull-right">{{allCnt}}</span>
                         </button>
                         <button class="btn btn-default fullwidth" type="button">
                             <span class="fa fa-star pull-left"> Your Starred Diagrams</span> <span class="badge pull-right">{{starredCnt}}</span>
@@ -21,6 +21,11 @@
                         <button class="btn btn-default fullwidth" type="button">
                             <span class="fa fa-unlock pull-left"> Your Public Diagrams</span> <span class="badge pull-right">{{publicCnt}}</span>
                         </button>
+                        <hr>
+                        <button class="btn btn-default fullwidth" type="button">
+                            <span class="fa fa-star pull-left"> Other Starred Diagrams</span> <span class="badge pull-right">{{otherStarredCnt}}</span>
+                        </button>
+
 
                     </div>
                 </div>
