--- a/client/views/home/homePage.html
+++ b/client/views/home/homePage.html
@@ -34,7 +34,7 @@
             <div class="col col-md-6 col-md-offset-1">
                 <div class="panel panel-info">
                     <div class="panel-heading">
-                        DIAGRAMS LAST UPDATED
+                        DIAGRAMS LAST MODIFIED
                     </div>
                     <div class="panel-body">
 
