--- a/client/views/home/homePage.html
+++ b/client/views/home/homePage.html
@@ -3,7 +3,7 @@
 
     <div id="homePage" class="page">
         <div class="content">
-
+<!--
             <div class="col col-md-3 col-md-offset-1">
                 <div class="panel panel-info">
                     <div class="panel-heading">
@@ -12,39 +12,37 @@
                     <div class="panel-body">
 
                         <button class="btn btn-primary fullwidth" type="button">
-                            <span class="fa fa-user pull-left"> <strong>Your Diagrams</strong></span> <span class="badge pull-right">{{allCnt}}</span>
+                            <span class="fa fa-user pull-left"> <strong>Your Diagrams</strong></span> <span class="badge pull-right">{{all}}</span>
                         </button>
                         <button class="btn btn-default fullwidth" type="button">
-                            <span class="fa fa-star pull-left"> Your Starred Diagrams</span> <span class="badge pull-right">{{starredCnt}}</span>
+                            <span class="fa fa-star pull-left"> Your Starred Diagrams</span> <span class="badge pull-right">{{starred}}</span>
                         </button>
                         <button class="btn btn-default fullwidth" type="button">
-                            <span class="fa fa-lock pull-left"> Your Private Diagrams</span> <span class="badge pull-right">{{privateCnt}}</span>
+                            <span class="fa fa-lock pull-left"> Your Private Diagrams</span> <span class="badge pull-right">{{private}}</span>
                         </button>
                         <button class="btn btn-default fullwidth" type="button">
-                            <span class="fa fa-unlock pull-left"> Your Public Diagrams</span> <span class="badge pull-right">{{publicCnt}}</span>
+                            <span class="fa fa-unlock pull-left"> Your Public Diagrams</span> <span class="badge pull-right">{{public}}</span>
                         </button>
                         <hr>
                         <button class="btn btn-default fullwidth" type="button">
-                            <span class="fa fa-star pull-left"> Other Starred Diagrams</span> <span class="badge pull-right">{{otherStarredCnt}}</span>
+                            <span class="fa fa-star pull-left"> Other Starred Diagrams</span> <span class="badge pull-right">{{otherStarred}}</span>
                         </button>
 
 
                     </div>
                 </div>
             </div>
-
-            <div class="col col-md-6 col-md-offset-1">
+-->
+            <div class="col col-md-6 col-md-offset-3">
                 <div class="panel panel-info">
                     <div class="panel-heading">
                         DIAGRAMS LAST MODIFIED
                     </div>
                     <div class="panel-body">
 
-                        <!--
-                        {{#each diagramsLastModified}}
-                            {{> homeListItem}}
+                        {{#each diagrams}}
+                            {{> seqDgmListItem}}
                         {{/each}}
-                        -->
 
                         <hr>
                         <a href="/diagrams/-1/all/1/modifiedAt/-1">View All</a>
@@ -55,18 +53,4 @@
 
         </div>
     </div>
-</template>
-
-
-<template name="homeListItem">
-    <a href="/view/{{_id}}" class="list-group-item">
-        <h4 class="list-group-item-heading">{{title}}
-            <div class="pull-right">
-                <span class="badge">{{agoTime modifiedAt}}</span>
-            </div>
-        </h4>
-        <p class="list-group-item-text">
-            <strong>{{username}}</strong>
-        </p>
-    </a>
 </template>
