--- a/client/views/history/item/historyListItem.html
+++ b/client/views/history/item/historyListItem.html
@@ -1,5 +1,5 @@
 <template name="historyListItem">
-    <a href="#" class="list-group-item" data-id="{{_id}}">
+    <a href="/history/{{_id}}" class="list-group-item">
         <h5 class="list-group-item-heading">{{title}}
             <div class="pull-right">
                 <a id="deleteBtnID" data-id="{{_id}}" href="#"><i class="fa fa-trash fa-2x"></i></a>
