--- a/client/views/history/detail/historyPage.html
+++ b/client/views/history/detail/historyPage.html
@@ -8,7 +8,7 @@
 
                     <h2 id="editBtnID">
                         {{#if canEdit}}<a href="#"><i class="fa fa-refresh pull-left"></i></a>{{/if}} {{title}}
-                        <span class="badge pull-right">{{agoTime doc.modifiedAt}}</span>
+                        <span class="badge pull-right">{{agoTime createdAt}}</span>
                     </h2>
 
 
