--- a/client/app/app.syntax.less
+++ b/client/app/app.syntax.less
@@ -10,3 +10,35 @@
 li {
   cursor: pointer;
 }
+
+.tag {
+  font-size: 14px;
+  padding: .3em .4em .4em;
+  margin: 0 .1em;
+}
+.tag a {
+  color: #bbb;
+  cursor: pointer;
+  opacity: 0.6;
+}
+.tag a:hover {
+  opacity: 1.0
+}
+.tag .remove {
+  vertical-align: bottom;
+  top: 0;
+}
+.tag a {
+  margin: 0 0 0 .3em;
+}
+.tag a .white {
+  color: #fff;
+  margin-bottom: 2px;
+}
+
+/*
+<span class="tag label label-info">
+  <span>Example Tag</span>
+  <a href="#"><i class="fa fa-times-circle white"></i></a>
+</span>
+*/
