--- a/client/views/static/privacyPage.html
+++ b/client/views/static/privacyPage.html
@@ -22,7 +22,7 @@
                 any further information from us.</p>
 
                 <h4>POLICY CHANGES</h4>
-                <p>Will never occur.</p>
+                <p>Policy changes will be communicated by email.</p>
             </div>
           </div>
         </div>
