--- a/client/views/tags/widget/tags.html
+++ b/client/views/tags/widget/tags.html
@@ -8,7 +8,7 @@
         <!--{{/each}}-->
     <!--{{else}}-->
         {{#each tags}}
-            <span class="label label-success">{{this}}</span>
+            <span class="label label-success">{{name}}</span>
         {{/each}}
     <!--{{/if}}-->
 </template>
