--- a/client/views/history/detail/historyPage.html
+++ b/client/views/history/detail/historyPage.html
@@ -7,7 +7,7 @@
             <div class="col col-md-12" style="margin-top: -20px">
 
                     <h2 id="editBtnID">
-                        {{#if canEdit}}<a href="#"><i class="fa fa-refresh pull-left"></i></a>{{/if}} {{title}}
+                        {{#if canEdit userId}}<a href="#"><i class="fa fa-refresh pull-left"></i></a>{{/if}} {{title}}
                         <span class="badge pull-right">{{agoTime createdAt}}</span>
                     </h2>
 
