--- a/client/views/static/landingPage.html
+++ b/client/views/static/landingPage.html
@@ -1,20 +1,26 @@
 <template name="landingPage">
-  <div id="landingPage" class="page">
-    <div class="content">
+    <div id="landingPage" class="page">
+        <div class="content">
 
 
-        <div class="col col-md-8 col-md-offset-2">
-            <div class="panel panel-info">
-            <div class="panel-heading">
-              LANDING PAGE
+            <div class="col col-md-8 col-md-offset-2">
+                <div class="panel panel-info">
+                    <div class="panel-body">
+                        <h1>Agile got you down...</h1>
+
+                        <h3 id="0" style="display: none;">Create and share sequence diagrams</h3>
+
+                        <p id="1" class="lead" style="display: none;">It's quick and easy</p>
+
+                        <h4 id="2" style="display: none;">In 5 minutes you can create a usable diagram.</h4>
+                    </div>
+                </div>
             </div>
-            <div class="panel-body">
-                <h1>I've got nothing...</h1>
+
+            <div id="3" class="col col-md-12" style="display: none;">
+                <hr>
+                <div id="diagram"></div>
             </div>
-          </div>
         </div>
-
-
     </div>
-  </div>
 </template>
