--- a/client/views/static/landingPage.html
+++ b/client/views/static/landingPage.html
@@ -10,7 +10,7 @@
 
                         <h3 id="0" style="display: none;">Create and share sequence diagrams</h3>
 
-                        <p id="1" class="lead" style="display: none;">It's quick and easy</p>
+                        <p id="1" class="lead" style="display: none;">It's quick and easy - and <strong>FREE!</strong></p>
 
                         <h4 id="2" style="display: none;">In 5 minutes you can create a usable diagram.</h4>
                     </div>
