--- a/client/views/home/homePage.html
+++ b/client/views/home/homePage.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
 
-
+            <a href="https://plus.google.com/110061703786770157444" rel="publisher">Google+</a>
         </div>
     </div>
 </template>
