--- a/client/views/splash/landingPage.html
+++ b/client/views/splash/landingPage.html
@@ -22,5 +22,7 @@
                 <div id="diagram"></div>
             </div>
         </div>
+        <a href="https://plus.google.com/110061703786770157444" rel="publisher">Google+</a>
+
     </div>
 </template>
