--- a/client/views/index.html
+++ b/client/views/index.html
@@ -2,6 +2,7 @@
     <title>iDiagram</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="AojYIOkrtQBmxGi9ZKeUxDZ5IekkL1kv9j3o5dolN8g" />
 
     <link rel="shortcut icon" href="/images/favicons/favicon.ico?v=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/images/favicons/apple-touch-icon-57x57.png?v=1">
@@ -17,5 +18,4 @@
     <link rel="icon" type="image/png" href="/images/favicons/favicon-96x96.png?v=1" sizes="96x96">
     <link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png?v=1" sizes="16x16">
     <link rel="icon" type="image/png" href="/images/favicons/favicon-32x32.png?v=1" sizes="32x32">
-    <a href="https://plus.google.com/110061703786770157444" rel="publisher">Google+</a>
 </head>
