--- a/client/views/splash/landingPage.html
+++ b/client/views/splash/landingPage.html
@@ -12,7 +12,7 @@
 
                         <p id="1" class="lead" style="display: none;">It's quick and easy - and <strong>FREE!</strong></p>
 
-                        <h4 id="2" style="display: none;">In 5 minutes you can create a usable diagram.</h4>
+                        <h4 id="2" style="display: none;">In <strong>5 minutes</strong> you can create a usable diagram.</h4>
                     </div>
                 </div>
             </div>
