--- a/client/views/typeahead/typeahead.html
+++ b/client/views/typeahead/typeahead.html
@@ -7,6 +7,6 @@
 </template>
 
 <template name="typeaheadItem">
-        <li class="list-group-item">{{this}}</li>
+        <a class="typeahead" href="#" data-tag="{{this}}"> <li class="list-group-item">{{this}}</li></a>
 </template>
 
