admin and about

--- a/client/views/static/aboutPage.html
+++ b/client/views/static/aboutPage.html
@@ -19,6 +19,12 @@
                         <hr>
 
                         <a href="https://trello.com/b/NePeqGwC/idiagram">Trello project tracking enhancements</a>
+
+                        <h3>Credit</h3>
+                        <ul>
+                            <li>http://bramp.github.io/js-sequence-diagrams</li>
+                            <li>http://meteor.com</li>
+                        </ul>
                     </div>
                 </div>
             </div>
