--- a/client/views/splash/landingPage.html
+++ b/client/views/splash/landingPage.html
@@ -8,16 +8,16 @@
                     <div class="panel-body">
                         <h1>Agile got you down...</h1>
 
-                        <h3 id="0" style="display: none;">Create and share sequence diagrams</h3>
+                        <h3>Create and share sequence diagrams</h3>
 
-                        <p id="1" class="lead" style="display: none;">It's quick and easy - and best of all <strong>FREE!</strong></p>
+                        <p>It's quick and easy - and best of all <strong>FREE!</strong></p>
 
-                        <h4 id="2" style="display: none;">In <strong>5 minutes</strong> you can create a sequence diagram to share with your team.</h4>
+                        <h4>In <strong>5 minutes</strong> you can create a sequence diagram to share with your team.</h4>
                     </div>
                 </div>
             </div>
 
-            <div id="3" class="col col-md-12" style="display: none;">
+            <div class="col col-md-12">
                 <hr>
                 <div id="diagram"></div>
             </div>
