--- a/client/views/static/feedbackPage.html
+++ b/client/views/static/feedbackPage.html
@@ -8,12 +8,13 @@
               FEEDBACK
             </div>
             <div class="panel-body">
-                <p class="lead">Please send feedback and ideas to <b>johntday@gmail.com</b>, or <a href="https://github.com/johntday/idiagram/issues">https://github.com/johntday/idiagram/issues</a>.</p>
+                <p class="lead">Please send feedback and ideas to <b>johntday@gmail.com</b> with <i>iDiagram</i> in the subject.</p>
 
+                <p>If your interested in <a href="http://meteor.com">meteor</a>, or Javascript and wish to collaborate on this project then please send me an email with with <i>iDiagram</i>
+                in the subject.</p>
             </div>
           </div>
         </div>
-
 
     </div>
   </div>
