--- a/client/views/static/aboutPage.html
+++ b/client/views/static/aboutPage.html
@@ -20,10 +20,13 @@
 
                         <a href="https://trello.com/b/NePeqGwC/idiagram">Trello project tracking enhancements</a>
 
-                        <h3>Credit</h3>
+                        <h3>Credit to</h3>
                         <ul>
                             <li>http://bramp.github.io/js-sequence-diagrams</li>
                             <li>http://meteor.com</li>
+                            <li>https://github.com/mbostock/d3</li>
+                            <li>http://bl.ocks.org/rkirsling/5001347</li>
+                            <li>http://marvl.infotech.monash.edu/webcola/</li>
                         </ul>
                     </div>
                 </div>
