--- a/client/app/app.syntax.less
+++ b/client/app/app.syntax.less
@@ -35,3 +35,10 @@ li {
   color: #fff;
   margin-bottom: 2px;
 }
+//.label {
+//  fill: white;
+//  font-family: Verdana;
+//  font-size: 25px;
+//  text-anchor: middle;
+//  cursor: move;
+//}
