--- a/client/views/context/ctxDgm/ctxDgm.html
+++ b/client/views/context/ctxDgm/ctxDgm.html
@@ -42,7 +42,7 @@
                                 <div class="col col-sm-12">
                                     <button type="button" class="btn btn-primary disabled" id="redrawBtnID">Redraw</button>
                                     <button type="button" class="btn btn-primary" id="saveBtnID"> Save </button>
-                                    <a class="btn btn-primary" href="/">Cancel</a>
+                                    <a class="btn btn-primary" href="/view/{{_id}}">Cancel</a>
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                                             Action <span class="caret"></span>
@@ -72,7 +72,6 @@
             </div>
 
             <div id="test" class="col col-md-{{diagramWidth}}">
-                <button id="centerID" class="btn btn-primary" href="#"><i class="fa fa-arrows-alt"></i> Center</button>
 
                 <div id="svg-div"></div>
 
