--- a/client/views/context/ctxDgmView/ctxDgmView.html
+++ b/client/views/context/ctxDgmView/ctxDgmView.html
@@ -48,9 +48,7 @@
 
                 <hr>
 
-                <div id="d3_selectable_force_directed_graph"></div>
-
-                <div id="powergraph"></div>
+                <div id="svg-div"></div>
 
                 {{> ctxDgmInfo}}
 
