--- a/client/views/context/ctxDgm/ctxDgm.html
+++ b/client/views/context/ctxDgm/ctxDgm.html
@@ -22,8 +22,23 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-12">
-                                    <label for="codeID" class="control-label">Text</label>
+                                    <label for="codeID" class="control-label">Lines</label>
                                     <textarea id="codeID" class="form-control" rows="3">{{code}}</textarea>
+                                <!--</div>-->
+                            <!--</div>-->
+                            <!--<div class="form-group">-->
+                                <!--<div class="col-sm-12">-->
+                                    <label for="legendID" class="control-label">Legend</label>
+                                    <table id="legendID" class="table table-striped table-condensed table-bordered">
+                                        <tbody>
+                                        {{#each legend}}
+                                        <tr>
+                                            <th scope="row">{{name}}</th>
+                                            <td>{{ref}}</td>
+                                        </tr>
+                                        {{/each}}
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                             <div class="form-group">
