--- a/client/views/context/ctxDgm/ctxDgm.less
+++ b/client/views/context/ctxDgm/ctxDgm.less
@@ -5,33 +5,35 @@
     stroke-width: 1px;
     fill: white;
   }
-
   .node {
     stroke: #fff;
     stroke-width: 1.5px;
     cursor: move;
     fill: #550000;
   }
-
   .group {
     stroke: #fff;
     stroke-width: 1.5px;
     cursor: move;
     opacity: 0.7;
   }
-
   .link {
     stroke: #555;
     stroke-width: 3px;
     stroke-opacity: 1;
     marker-end: url(#end-arrow);
   }
-
   .label {
     fill: white;
     font-family: Verdana;
-    font-size: 25px;
+    font-size: 20px;
     text-anchor: middle;
     cursor: move;
+  }
+  .legend {
+    fill: black;
+    font-family: Verdana;
+    font-size: 15px;
+    text-anchor: left;
   }
 }
